# kaze

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  version.config.toml
kaze/: cli.py
kaze/commands/: chunks.py  create.py  info.py  query.py
kaze/core/: db_utils.py  embedding_utils.py  file_utils.py  treesitter_utils.py
kaze/languages/: __init__.py  base.py  java.py  javascript.py  python.py  typescript.py
kaze/models/: chunk.py
kaze/utils/: chunk_helpers.py  config.py  display.py  helpers.py
scripts/: release.py  version.py
