[project]
name = "kaze"
version = "0.1.0"
description = "Unified tool for creating and querying embeddings."
authors = [{ name = "Your Name", email = "your.email@example.com" }]
dependencies = [
    "llm",
    "click",
    "rich",  # For nicer terminal output
    "tiktoken" # for token counting
]

[project.scripts]
kaze = "kaze.cli:cli"

[build-system]
requires = ["uv"]
build-backend = "uv.build.api"

[tool.uv.build]
requires = ["uv"] 
