[project]
name = "kaze"
version = "0.3.0"
description = "Unified tool for creating and querying embeddings."
authors = [{ name = "peritissimus", email = "149.kush@gmail.com" }]
dependencies = [
    "llm",
    "click",
    "rich",  # For nicer terminal output
    "tiktoken", # for token counting
    "sqlite-utils", # for working with sqlite databases
]

[project.scripts]
kaze = "kaze.cli:cli"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
