[project]
name = "kaze"
version = "0.9.0"
description = "Unified tool for creating and querying embeddings."
dependencies = [ "llm", "click", "rich", "tiktoken", "sqlite-utils", "tree-sitter", "tree-sitter-languages",]
[[project.authors]]
name = "peritissimus"
email = "149.kush@gmail.com"

[build-system]
requires = [ "setuptools>=42", "wheel",]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [ "toml>=0.10.2",]

[project.scripts]
kaze = "kaze.cli:cli"
